--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "[![Actions Status](https://github.com/ValeriyOrlov/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/ValeriyOrlov/frontend-project-lvl2/actions)",
   "main": "gendiff.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
     "type": "git",
