--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "[![Actions Status](https://github.com/ValeriyOrlov/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/ValeriyOrlov/frontend-project-lvl2/actions)",
-  "main": "gendiff.js",
+  "main": "bin/gendiff.js",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
