--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "commander": "^9.4.0",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node": "^20.2.0"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
